; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_txd.c_txd_read_packet.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_txd.c_txd_read_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32* }
%struct.TYPE_7__ = type { i64 }

@AVERROR_EOF = common dso_local global i32 0, align 4
@TXD_MARKER = common dso_local global i32 0, align 4
@TXD_MARKER2 = common dso_local global i32 0, align 4
@AV_LOG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"marker does not match\0A\00", align 1
@AVERROR_INVALIDDATA = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [21 x i8] c"unknown chunk id %i\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_8__*, %struct.TYPE_7__*)* @txd_read_packet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @txd_read_packet(%struct.TYPE_8__* %0, %struct.TYPE_7__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_8__*, align 8
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %4, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %5, align 8
  %11 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  store i32* %13, i32** %6, align 8
  br label %14

14:                                               ; preds = %54, %2
  %15 = load i32*, i32** %6, align 8
  %16 = call i32 @avio_rl32(i32* %15)
  store i32 %16, i32* %7, align 4
  %17 = load i32*, i32** %6, align 8
  %18 = call i32 @avio_rl32(i32* %17)
  store i32 %18, i32* %8, align 4
  %19 = load i32*, i32** %6, align 8
  %20 = call i32 @avio_rl32(i32* %19)
  store i32 %20, i32* %9, align 4
  %21 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %22 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %21, i32 0, i32 0
  %23 = load i32*, i32** %22, align 8
  %24 = call i64 @avio_feof(i32* %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %14
  %27 = load i32, i32* @AVERROR_EOF, align 4
  store i32 %27, i32* %3, align 4
  br label %75

28:                                               ; preds = %14
  %29 = load i32, i32* %9, align 4
  %30 = load i32, i32* @TXD_MARKER, align 4
  %31 = icmp ne i32 %29, %30
  br i1 %31, label %32, label %41

32:                                               ; preds = %28
  %33 = load i32, i32* %9, align 4
  %34 = load i32, i32* @TXD_MARKER2, align 4
  %35 = icmp ne i32 %33, %34
  br i1 %35, label %36, label %41

36:                                               ; preds = %32
  %37 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %38 = load i32, i32* @AV_LOG_ERROR, align 4
  %39 = call i32 (%struct.TYPE_8__*, i32, i8*, ...) @av_log(%struct.TYPE_8__* %37, i32 %38, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %40 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %40, i32* %3, align 4
  br label %75

41:                                               ; preds = %32, %28
  %42 = load i32, i32* %7, align 4
  switch i32 %42, label %55 [
    i32 129, label %43
    i32 131, label %48
    i32 130, label %54
    i32 128, label %54
  ]

43:                                               ; preds = %41
  %44 = load i32, i32* %8, align 4
  %45 = icmp ugt i32 %44, 100
  br i1 %45, label %46, label %47

46:                                               ; preds = %43
  br label %61

47:                                               ; preds = %43
  br label %48

48:                                               ; preds = %41, %47
  %49 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %50 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %49, i32 0, i32 0
  %51 = load i32*, i32** %50, align 8
  %52 = load i32, i32* %8, align 4
  %53 = call i32 @avio_skip(i32* %51, i32 %52)
  br label %54

54:                                               ; preds = %41, %41, %48
  br label %14

55:                                               ; preds = %41
  %56 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %57 = load i32, i32* @AV_LOG_ERROR, align 4
  %58 = load i32, i32* %7, align 4
  %59 = call i32 (%struct.TYPE_8__*, i32, i8*, ...) @av_log(%struct.TYPE_8__* %56, i32 %57, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0), i32 %58)
  %60 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %60, i32* %3, align 4
  br label %75

61:                                               ; preds = %46
  %62 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %63 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %62, i32 0, i32 0
  %64 = load i32*, i32** %63, align 8
  %65 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %66 = load i32, i32* %8, align 4
  %67 = call i32 @av_get_packet(i32* %64, %struct.TYPE_7__* %65, i32 %66)
  store i32 %67, i32* %10, align 4
  %68 = load i32, i32* %10, align 4
  %69 = icmp slt i32 %68, 0
  br i1 %69, label %70, label %72

70:                                               ; preds = %61
  %71 = load i32, i32* %10, align 4
  store i32 %71, i32* %3, align 4
  br label %75

72:                                               ; preds = %61
  %73 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %74 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %73, i32 0, i32 0
  store i64 0, i64* %74, align 8
  store i32 0, i32* %3, align 4
  br label %75

75:                                               ; preds = %72, %70, %55, %36, %26
  %76 = load i32, i32* %3, align 4
  ret i32 %76
}

declare dso_local i32 @avio_rl32(i32*) #1

declare dso_local i64 @avio_feof(i32*) #1

declare dso_local i32 @av_log(%struct.TYPE_8__*, i32, i8*, ...) #1

declare dso_local i32 @avio_skip(i32*, i32) #1

declare dso_local i32 @av_get_packet(i32*, %struct.TYPE_7__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
